Fix manual change bug
After trying to make radio button state switch via JS, I decided to stick to custom properties.
Radio button functionality is preaty useless by now, all state changes are tracked and executed via JS

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ a{
     background-color: transparent;
     color: var(--font-color-black);
 }
-:checked + label{
+input[checked] + label{
     background-color: darkred;
     border-color: darkred;
     color: var(--font-color-white);
